tests/valid/boolean_operators/eq_false.rs
/*
return: 0
*/

main(): int {
    return 1 == 2;
}