tests/invalid/variables/redefine.rs
/*
fail: 1
*/

main(): int {
    a: int = 1;
    a: int = 2;
    return a;
}